--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
   </nav>
   
 <nav class="flex flex-ai-c flex-jc-sb">
-<div class="header_secondlink" >
-<a href="#">HOME</a>
-<a href="#">HANDOUTS</a>
-<a href="#">ACTIVITIES</a>
-<a href="#">EXAM</a>
+<div class="header_secondlink container">
+<ul class="header_secondlink_list">
+<li><a href="#">HOME</a></li>
+<li><a href="#">HANDOUTS</a></li>
+<li><a href="#">ACTIVITIES</a></li>
+<li><a href="#">EXAM</a></li>
+</ul>
 </div>
 </nav>
 </header>
