ok na yung format(dropdown)

--- a/index.html
+++ b/index.html
@@ -44,13 +44,19 @@
 <div class="header_secondlink container">
 <ul class="header_secondlink_list">
 <li><a href="#">HOME</a></li>
-<li class="Header_secondlink_list_Handouts">
-    <a href="#">HANDOUTS</a>
-    <div class="header_secondlink_list_Handouts_content">
-        <a href="#">link 1</a>
-        <a href="#">link 2</a>
-        <a href="#">link 3</a>
+<li class="Header_secondlink_list_Handouts"><a href="#">HANDOUTS</a>
+    <!--dropdown-->
+    <div class="header_secondlink_list_Handouts_container">
+        <span>Subjects</span>
+        <ul class="header_secondlink_list_Handouts_container_list">
+        <li><a href="#">Personal Development</a></li>
+        <li><span></span></li>
+        <li><a href="#">Reading and Writing</a></li>
+        <li><span></span></li>
+        <li><a href="#">Earth and Life Science</a></li>
+        </ul>
     </div>
+    <!--dropdown-->
 </li>
 <li><a href="#">ACTIVITIES</a></li>
 <li><a href="#">EXAM</a></li>
@@ -58,7 +64,6 @@
 </div>
 </nav>
 <!--dropdown menu-->
-<div class="header_dropdown-content">
 
 
 </header>
