puta umookay na yung drop down lols
putaaaang portfolio toh

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <div class="header_secondlink container">
 <ul class="header_secondlink_list">
 <li><a href="#">HOME</a></li>
-<li class="Header_secondlink_list_Handouts"><a href="#">HANDOUTS</a>
+<li class="header_secondlink_list_handouts"><a href="#">HANDOUTS</a>
     <!--dropdown-->
-    <div class="header_secondlink_list_Handouts_container">
+    <div class="header_secondlink_list_handouts_container">
         <span>Subjects</span>
-        <ul class="header_secondlink_list_Handouts_container_list">
+        <ul class="header_secondlink_list_handouts_container_list">
         <li><a href="#">Personal Development</a></li>
         <li><span></span></li>
         <li><a href="#">Reading and Writing</a></li>
@@ -68,7 +68,11 @@
 
 </header>
 <body class="body">
-    <div class=" body_box">
+    <div class="body_box">
+    </div>
+
+    <div class="body_box2">
+
     </div>
 </body>
 </html>
