--- a/index.html
+++ b/index.html
@@ -58,8 +58,34 @@
     </div>
     <!--dropdown-->
 </li>
-<li><a href="#">ACTIVITIES</a></li>
-<li><a href="#">EXAM</a></li>
+<li class="header_secondlink_list_activity"><a href="#">ACTIVITIES</a>
+<!--dropdown-->
+<div class="header_secondlink_list_activity_container">
+    <span>Subjects</span>
+    <ul class="header_secondlink_list_activity_container_list">
+    <li><a href="#">Personal Development</a></li>
+    <li><span></span></li>
+    <li><a href="#">Reading and Writing</a></li>
+    <li><span></span></li>
+    <li><a href="#">Earth and Life Science</a></li>
+    </ul>
+</div>
+</li>
+<!--dropdown-->
+<li class="header_secondlink_list_exam"><a href="#">EXAM</a>
+    <div class="header_secondlink_list_exam_container">
+        <span>Subjects</span>
+        <ul class="header_secondlink_list_exam_container_list">
+        <li><a href="#">Personal Development</a></li>
+        <li><span></span></li>
+        <li><a href="#">Reading and Writing</a></li>
+        <li><span></span></li>
+        <li><a href="#">Earth and Life Science</a></li>
+        </ul>
+    </div>
+    </li>
+    <!--dropdown-->
+</li>
 </ul>
 </div>
 </nav>
