--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <nav class="flex flex-ai-c flex-jc-sb">
 <div class="header_secondlink container">
 <ul class="header_secondlink_list">
-<li><a href="#">HOME</a></li>
+<li><a href="https://jeromians.github.io/Portfolio/">HOME</a></li>
 <li class="header_secondlink_list_handouts"><a href="#">HANDOUTS</a>
     <!--dropdown-->
     <div class="header_secondlink_list_handouts_container">
