animation nlang tapos na lols

--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@
 </div>
 </nav>
 <!--dropdown menu-->
-
-
 </header>
 <body class="body">
     <div class="body_box">
     </div>
-
-    <div class="body_box2">
-
-    </div>
 </body>
+<footer class="footer">
+<div class="footer_box">
+
+</div>
+</footer>
 </html>
