--- a/Perdev_HOs.html
+++ b/Perdev_HOs.html
@@ -50,7 +50,7 @@
     <div class="header_secondlink_list_handouts_container dropdown_animation">
         <span>Subjects</span>
         <ul class="header_secondlink_list_handouts_container_list">
-        <li><a href="/Perdev_HOs.html">Personal Development</a></li>
+        <li><a href="#">Personal Development</a></li>
         <li><span></span></li>
         <li><a href="#">Reading and Writing</a></li>
         <li><span></span></li>
@@ -96,10 +96,51 @@
 </nav>
 </header>
 
-<body class="body">
-<div class="body_box">
-      <div class="body_box_frames center">
-        <img src="Assets/Frame 3.png" Class="body_box_frames_imgs center" alt="Frame 1" id="Frame 1">
+<body class="body1">
+<div class="body1_container">
+      <div class="body1_container_content">
+        <h1 class="">Personal Development</h1>
+        <h2>Stress</h2>
+        <p>
+            Stress is a feeling of emotional or physical tension. 
+            It can come from any event or thought that makes you feel frustrated, angry, or nervous. 
+            Stress is your body's reaction to a challenge or demand. In short bursts, stress can be positive, 
+            such as when it helps you avoid danger or meet a deadline....
+        </p>
+        <h2>Aspect of Life</h2>
+        <p>
+            There is so many people has contributed in field of psychology and it make a resounding afffect within
+            the said field.
+            Psychology borders on various other fields including physiology, neuroscience, sociology, anthropology, 
+            as well as philosophy and other components of the humanities. The history of psychology as a scholarly 
+            study of the mind and behavior dates back to the Ancient Greeks. There is also evidence of psychological 
+            thought in ancient Egypt. A high level of work on mind-sciences can be found in Vedic scriptures of Sanatana Dharm (Hinduism), 
+            an application of certain principles as a part of yogic practices of India.....
+        </p>
+        <h2>Power of the Brain</h2>
+        <p>
+            The theory of the whole-brain-work basically explain the oscillatory
+            dynamics of the humans and nonhuman brain during cognitive processing. the theory
+            is based on principle according to which brain function are 
+            represented by the oscillatory
+        </p>
+        <h2>Family</h2>
+        <p>
+            Family is the most basic unit of a community.The Filipino family provides an interesting study because familism is embedded in its social
+            sphere, translating its relational quality outside the family. Being family-centred, child-centric,
+            having close ties, and a large family size (Medina, 2001; Miralao, 1994) are some basic elements of
+            families in the Philippines. Applying regression on the data from the World Values Survey for the
+            Philippines in 1996 and 2001, this study aims to explore the correlates of views on family values
+            among Filipinos, specifically those concerning the traditional nuclear family set-up, the woman's
+            roles within family, and the reciprocal relationship of the parent and child. While the results
+            show that Filipinos generally share family values, especially on those related to child rearing for
+            both parents, and child-bearing, there are indications that such views also differ across educational attainment, 
+            geographic location, social class, and ethnic groups. Disparities in views could
+            be reflecting shifting family values, which could then help explain current polarising policy
+            debates on issues on the reproductive health, divorce, and migration.......
+        </p>
+
+
      </div>
 </div>
 </body>
