--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="header_secondlink_list_handouts_container dropdown_animation">
         <span>Subjects</span>
         <ul class="header_secondlink_list_handouts_container_list">
-        <li><a href="/Perdev_HOs.md">Personal Development</a></li>
+        <li><a href="/Perdev_HOs.html">Personal Development</a></li>
         <li><span></span></li>
         <li><a href="#">Reading and Writing</a></li>
         <li><span></span></li>
