--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" size= 32x32; type="image/img" href="./Assets/Logo(Favicon).png">
-    <title>Student Portal</title>
+    <title>Personal Development HO</title>
     <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
