--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <nav class="flex flex-ai-c flex-jc-sb">
 <div class="header_secondlink container">
 <ul class="header_secondlink_list">
-<li><a href="/index.html">HOME</a></li>
+<li><a href="index.html">HOME</a></li>
 <li class="header_secondlink_list_handouts dropdown"><a href="#">HANDOUTS</a>
     <!--dropdown-->
     <div class="header_secondlink_list_handouts_container dropdown_animation">
