--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -44,13 +44,13 @@
 <nav class="flex flex-ai-c flex-jc-sb">
 <div class="header_secondlink container">
 <ul class="header_secondlink_list">
-<li><a href="/index.html">HOME</a></li>
+<li><a href="index.html">HOME</a></li>
 <li class="header_secondlink_list_handouts dropdown"><a href="#">HANDOUTS</a>
     <!--dropdown-->
     <div class="header_secondlink_list_handouts_container dropdown_animation">
         <span>Subjects</span>
         <ul class="header_secondlink_list_handouts_container_list">
-        <li><a href="#">Personal Development</a></li>
+        <li><a href="perdev_ho.html">Personal Development</a></li>
         <li><span></span></li>
         <li><a href="#">Reading and Writing</a></li>
         <li><span></span></li>
@@ -100,14 +100,29 @@
 <div class="body1_container">
       <div class="body1_container_content">
         <h1 class="">Personal Development</h1>
+        <div>
         <h2>Stress</h2>
+        <h6>December 1 2020</h6>
         <p>
             Stress is a feeling of emotional or physical tension. 
             It can come from any event or thought that makes you feel frustrated, angry, or nervous. 
             Stress is your body's reaction to a challenge or demand. In short bursts, stress can be positive, 
-            such as when it helps you avoid danger or meet a deadline....
+            such as when it helps you avoid danger or meet a deadline.....
         </p>
+        </div>
+        <div>
+        <h2>Power of the Brain</h2>
+        <h6>December 7 2020</h6>
+        <p>
+                The theory of the whole-brain-work basically explain the oscillatory
+                dynamics of the humans and nonhuman brain during cognitive processing. the theory
+                is based on principle according to which brain function are 
+                represented by the oscillatory.....
+        </p>      
+        </div>
+        <div>
         <h2>Aspect of Life</h2>
+        <h6>January 5 2021</h6>
         <p>
             There is so many people has contributed in field of psychology and it make a resounding afffect within
             the said field.
@@ -117,14 +132,10 @@
             thought in ancient Egypt. A high level of work on mind-sciences can be found in Vedic scriptures of Sanatana Dharm (Hinduism), 
             an application of certain principles as a part of yogic practices of India.....
         </p>
-        <h2>Power of the Brain</h2>
-        <p>
-            The theory of the whole-brain-work basically explain the oscillatory
-            dynamics of the humans and nonhuman brain during cognitive processing. the theory
-            is based on principle according to which brain function are 
-            represented by the oscillatory
-        </p>
+        </div>
+        <div>
         <h2>Family</h2>
+        <h6>January 18 2021</h6>
         <p>
             Family is the most basic unit of a community.The Filipino family provides an interesting study because familism is embedded in its social
             sphere, translating its relational quality outside the family. Being family-centred, child-centric,
@@ -139,7 +150,7 @@
             be reflecting shifting family values, which could then help explain current polarising policy
             debates on issues on the reproductive health, divorce, and migration.......
         </p>
-
+        </div>
 
      </div>
 </div>
