--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -7,7 +7,8 @@
     <title>Personal Development HO</title>
     <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+    <link href="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/Script.js"></script>
 </head>
@@ -96,11 +97,15 @@
 </nav>
 </header>
 
-<body class="body1">
+<body class="body1"> 
+<h1 class="">Personal Development</h1>
+<h4>Monday, Wednesday</h4>
+<h4 id="title">Teacher: Ana Marie Altarejos</h4>
 <div class="body1_container">
+   
       <div class="body1_container_content">
-        <h1 class="">Personal Development</h1>
-        <div>
+        
+        <div class="body1_container_content_item">
         <h2>Stress</h2>
         <h6>December 1 2020</h6>
         <p>
@@ -110,7 +115,7 @@
             such as when it helps you avoid danger or meet a deadline.....
         </p>
         </div>
-        <div>
+        <div class="body1_container_content_item">
         <h2>Power of the Brain</h2>
         <h6>December 7 2020</h6>
         <p>
@@ -120,7 +125,7 @@
                 represented by the oscillatory.....
         </p>      
         </div>
-        <div>
+        <div class="body1_container_content_item">
         <h2>Aspect of Life</h2>
         <h6>January 5 2021</h6>
         <p>
@@ -133,7 +138,7 @@
             an application of certain principles as a part of yogic practices of India.....
         </p>
         </div>
-        <div>
+        <div class="body1_container_content_item">
         <h2>Family</h2>
         <h6>January 18 2021</h6>
         <p>
