last comit sa HO design

--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -98,9 +98,11 @@
 </header>
 
 <body class="body1"> 
+<div class="body1_title">
 <h1 class="">Personal Development</h1>
 <h4>Monday, Wednesday</h4>
 <h4 id="title">Teacher: Ana Marie Altarejos</h4>
+</div>
 <div class="body1_container">
    
       <div class="body1_container_content">
@@ -114,6 +116,9 @@
             Stress is your body's reaction to a challenge or demand. In short bursts, stress can be positive, 
             such as when it helps you avoid danger or meet a deadline.....
         </p>
+        <a href="#">
+        <button class="body1_container_content_item_btn">READ MORE</button>
+        </a>
         </div>
         <div class="body1_container_content_item">
         <h2>Power of the Brain</h2>
@@ -123,7 +128,10 @@
                 dynamics of the humans and nonhuman brain during cognitive processing. the theory
                 is based on principle according to which brain function are 
                 represented by the oscillatory.....
-        </p>      
+        </p>
+        <a href="#">
+            <button class="body1_container_content_item_btn">READ MORE</button>
+        </a>      
         </div>
         <div class="body1_container_content_item">
         <h2>Aspect of Life</h2>
@@ -137,6 +145,9 @@
             thought in ancient Egypt. A high level of work on mind-sciences can be found in Vedic scriptures of Sanatana Dharm (Hinduism), 
             an application of certain principles as a part of yogic practices of India.....
         </p>
+        <a href="#">
+            <button class="body1_container_content_item_btn">READ MORE</button>
+        </a>
         </div>
         <div class="body1_container_content_item">
         <h2>Family</h2>
@@ -155,9 +166,12 @@
             be reflecting shifting family values, which could then help explain current polarising policy
             debates on issues on the reproductive health, divorce, and migration.......
         </p>
+        <a href="#">
+            <button class="body1_container_content_item_btn">READ MORE</button>
+        </a>
         </div>
 
-     </div>
+        </div>
 </div>
 </body>
 
