--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -97,17 +97,17 @@
 </nav>
 </header>
 
-<body class="body1"> 
-<div class="body1_title">
+<body class="bodyPerdevHO"> 
+<div class="bodyPerdevHO_title">
 <h1 class="">Personal Development</h1>
 <h4>Monday, Wednesday</h4>
 <h4 id="title">Teacher: Ana Marie Altarejos</h4>
 </div>
-<div class="body1_container">
+<div class="bodyPerdevHO_container">
    
-      <div class="body1_container_content">
+      <div class="bodyPerdevHO_container_content">
         
-        <div class="body1_container_content_item">
+        <div class="bodyPerdevHO_container_content_item">
         <h2>Stress</h2>
         <h6>December 1 2020</h6>
         <p>
@@ -116,11 +116,11 @@
             Stress is your body's reaction to a challenge or demand. In short bursts, stress can be positive, 
             such as when it helps you avoid danger or meet a deadline.....
         </p>
-        <a href="#">
-        <button class="body1_container_content_item_btn">READ MORE</button>
+        <a href="Stress(Perdev,HO).html">
+        <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
-        <div class="body1_container_content_item">
+        <div class="bodyPerdevHO_container_content_item">
         <h2>Power of the Brain</h2>
         <h6>December 7 2020</h6>
         <p>
@@ -130,10 +130,10 @@
                 represented by the oscillatory.....
         </p>
         <a href="#">
-            <button class="body1_container_content_item_btn">READ MORE</button>
+            <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>      
         </div>
-        <div class="body1_container_content_item">
+        <div class="bodyPerdevHO_container_content_item">
         <h2>Aspect of Life</h2>
         <h6>January 5 2021</h6>
         <p>
@@ -146,10 +146,10 @@
             an application of certain principles as a part of yogic practices of India.....
         </p>
         <a href="#">
-            <button class="body1_container_content_item_btn">READ MORE</button>
+            <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
-        <div class="body1_container_content_item">
+        <div class="bodyPerdevHO_container_content_item">
         <h2>Family</h2>
         <h6>January 18 2021</h6>
         <p>
@@ -167,7 +167,7 @@
             debates on issues on the reproductive health, divorce, and migration.......
         </p>
         <a href="#">
-            <button class="body1_container_content_item_btn">READ MORE</button>
+            <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
 
