activity area commit

--- a/Stress(Perdev,HO).html
+++ b/Stress(Perdev,HO).html
@@ -232,7 +232,33 @@
 </div>
 </div>
 </div>
+
+<div class="bodystress_activity_section container">
+    <h1>Activity:</h1>
+    <h5>In-class Exercises:</h5>
+    <ol>
+    <li> Make a table of you timetable of your daily routine from morning to afternoon.</li>
+    <li>Make a planner on how to avoid stress. At least 5 plans or ways.</li>
+    <li>Ask one Friend how are they coping with stress of today’s current situation.</li>
+    <p>Note: Put the name, age and gender of the person you have asked. </p>
+    </ol>
+   <a href="https://drive.google.com/file/d/1fBJyAdCjsJOXE-_DwWL_ADjI2s1yvKWS/view?usp=sharing">
+   <button class="bodystress_activity_section_btn"> Submission </button>
+    </a> 
+    <h5>Assignment 1:</h5>
+    <p>Instruction:</p>
+    <p>
+        At your own pace, write, draw, paint, make a song, poem or jingle how you handle emotional 
+        stresses and emotional pain. Same grades.
+    </p>
+    <a href="https://drive.google.com/file/d/1s23BCgoOBOL1g7dUAZc4J9iBC-CoUf5k/view?usp=sharing">
+        <button class="bodystress_activity_section_btn"> Submission </button>
+</div>
+
+  
+
 </body>
+
 
 <footer class="footer">
 <div class="footer_box">
