tapos na yung stress

--- a/Stress(Perdev,HO).html
+++ b/Stress(Perdev,HO).html
@@ -98,7 +98,10 @@
 </header>
 
 <body class="bodystress">
-<div class="bodystress_container container">
+
+<div class="wrapper">
+    <div class="maincontent">
+<div class="bodystress_container containerwithsidebar">
 <div class="bodystress_container_title">
 <h1>Stress</h1>
 <h4>Personal Development,December 1 2020 : Tuesday</h4>
@@ -106,7 +109,8 @@
 <h6></h6>
 </div>
 <div class="bodystress_container_textarea">
-<div class="bodystress_container_textarea_introduction">
+<div class="bodystress_container_textarea_introduction" id="introduction">
+<h2>Introduction</h2>    
 <p>
     Stress is a feeling of emotional or physical tension. It can come from any event or thought that makes you feel frustrated, angry, or nervous. 
     Stress is your body's reaction to a challenge or demand. In short bursts, stress can be positive, such as when it helps you avoid danger or meet a deadline
@@ -120,7 +124,7 @@
     It is also a feeling of emotional or physical tension. It may come from any events or througth that make you feel frustrated, angry,nervous.
 </p>
 </div>
-<div class="bodystress_container_textarea_typeofstress">
+<div class="bodystress_container_textarea_typeofstress" id="TypeofStress">
 <h2>Type of Stress</h2>
 <p>
     According to American Psychological Association (APA), there are 3 different types stress — acute stress, episodic acute stress, and chronic stress. 
@@ -190,7 +194,7 @@
     <li>Sexual difficulties.</li>
 </ul>
 </div>
-<div class="bodystress_container_textarea_typeofstressor">
+<div class="bodystress_container_textarea_typeofstressor" id="TypeofStressor">
 <h2>Type of Stressor (Uestress Vs. Distress)</h2>
 <p>
     In daily life, we often use the term "stress" to describe negative situations. This leads many people to believe that all stress is bad for you, 
@@ -207,7 +211,7 @@
    Feels unpleasant, Decreases performance, Can lead to mental and physical problems.
 </p>
 </div>
-<div class="bodystress_container_textarea_tips">
+<div class="bodystress_container_textarea_tips" id="Tips">
 <h2>Tips for reducing stress</h2>
 <p>
     People can learn to manage stress and lead happier, healthier lives. You may want to begin with the following tips:
@@ -231,9 +235,9 @@
 </div>
 </div>
 </div>
-</div>
 
-<div class="bodystress_activity_section container">
+
+<div class="bodystress_activity_section containerwithsidebar" id="activity">
     <h1>Activity:</h1>
     <h5>In-class Exercises:</h5>
     <ol>
@@ -249,14 +253,28 @@
     <p>Instruction:</p>
     <p>
         At your own pace, write, draw, paint, make a song, poem or jingle how you handle emotional 
-        stresses and emotional pain. Same grades.
+        stresses and emotional pain.<br> same grades.
     </p>
     <a href="https://drive.google.com/file/d/1s23BCgoOBOL1g7dUAZc4J9iBC-CoUf5k/view?usp=sharing">
-        <button class="bodystress_activity_section_btn"> Submission </button>
+        <button class="bodystress_activity_section_btn"> Submission </button></a>
 </div>
-
-  
-
+</div>
+<div class="bodystress_stickyui sidebar">
+        <div class=" bodystress_stickyui_content">
+        <h1>Topic Outline</h1>
+        <h2>Stress</h2>
+        <h6>Title</h6>
+        <h3>Sections:</h3>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#TypeofStress">Type of Stress</a></li>
+            <li><a href="#TypeofStressor">Type of Stressor</a></li>
+            <li><a href="#Tips">Tips for reducing stress</a></li>
+            <li><a href="#activity">Activity</a></li>
+        </ul>
+        </div>
+</div>
+</div>
 </body>
 
 
