power of the mind

--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -129,7 +129,7 @@
                 is based on principle according to which brain function are 
                 represented by the oscillatory.....
         </p>
-        <a href="#">
+        <a href="PoweroftheMind(Perdev,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>      
         </div>
