--- a/perdev_ho.html
+++ b/perdev_ho.html
@@ -145,7 +145,7 @@
             thought in ancient Egypt. A high level of work on mind-sciences can be found in Vedic scriptures of Sanatana Dharm (Hinduism), 
             an application of certain principles as a part of yogic practices of India.....
         </p>
-        <a href="#">
+        <a href="AspectofSelf(Perdev,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
